# business-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  code_analysis_rules.json  install.bat  pyproject.toml  restart.bat  start.bat  start_after_tests.bat  start_usage_report.bat  update.bat
.claude/commands/feedback/: fix.md
docs/: COMMAND_HANDLER.md  LLM_MODELS_configuration.md  ROUTER_KEYWORD_HINTS.md  TOOL_LIMIT.md  VOICE_MESSAGE_ROUTING.md
docs/commands/: USAGE.md
docs/implementation_patterns/: tool_call_gating.md
docs/plugins/: plugin-development-guide.md
docs/plugins/features/: FILE_UPLOAD.md  FTP_UPLOAD.md  LOGGING.md
src/business_assistant/: main.py
src/business_assistant/agent/: agent.py  deps.py  router.py  system_prompt.py
src/business_assistant/bot/: app.py  config_provider.py  handler.py  handler_deps.py  health.py
src/business_assistant/config/: constants.py  log_setup.py  pidlock.py  settings.py
src/business_assistant/files/: downloader.py  handler_registry.py
src/business_assistant/memory/: store.py
src/business_assistant/plugins/: hook_manager.py  loader.py  registry.py
src/business_assistant/upload/: ftp_service.py
src/business_assistant/usage/: aggregator.py  command.py  formatter.py  models.py  prices.py  tracker.py
tests/: conftest.py  test_agent.py  test_bot_handler.py  test_bot_handler_attachments.py  test_config.py  test_credential_loader.py  test_file_downloader.py  test_file_handler_registry.py  test_flag_watcher.py  test_ftp_service.py  test_health.py  test_integration.py  test_log_analyzer.py  test_log_setup.py  test_memory.py  test_pidlock.py  test_plugin_loader.py  test_plugin_registry.py  test_router.py  test_startup_greeting.py  test_tool_count.py  test_usage_command.py  test_usage_formatter.py  test_usage_tracker.py
tests/integration/: conftest.py  test_attachment_url_flow.py  test_draft_reply_flow.py
tools/: analyze_code.bat  analyze_usage.bat  rtm_auth.py  run_integration_tests.bat  run_tests.bat  tests.bat  update_bot_libs.bat
tools/log_analyze/: __main__.py  prices.py  reader.py
