[project]
name = "business-assistant-v2"
version = "0.1.0"
description = "Plugin-based XMPP chatbot using PydanticAI for natural language understanding"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic-ai",
    "python-dotenv",
    "bot-commander[xmpp]",
    "business-assistant-imap-plugin",
    "business-assistant-calendar-plugin",
    "business-assistant-rtm-plugin",
    "business-assistant-transcribe-plugin",
    "business-assistant-obsidian-plugin",
    "business-assistant-project-management-plugin",
    "business-assistant-filesystem-plugin",
    "business-assistant-workingtimes-plugin",
    "business-assistant-tts-plugin",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/business_assistant"]

[tool.uv.sources]
bot-commander = { path = "D:/GIT/BenjaminKobjolke/bot-commander", editable = true }
business-assistant-imap-plugin = { path = "D:/GIT/BenjaminKobjolke/business-assistant-imap-plugin", editable = true }
business-assistant-calendar-plugin = { path = "D:/GIT/BenjaminKobjolke/business-assistant-calendar-plugin", editable = true }
business-assistant-rtm-plugin = { path = "D:/GIT/BenjaminKobjolke/business-assistant-rtm-plugin", editable = true }
business-assistant-transcribe-plugin = { path = "D:/GIT/BenjaminKobjolke/business-assistant-transcribe-plugin", editable = true }
business-assistant-obsidian-plugin = { path = "D:/GIT/BenjaminKobjolke/business-assistant-obsidian-plugin", editable = true }
business-assistant-project-management-plugin = { path = "D:/GIT/BenjaminKobjolke/business-assistant-project-management-plugin", editable = true }
business-assistant-filesystem-plugin = { path = "D:/GIT/BenjaminKobjolke/business-assistant-filesystem-plugin", editable = true }
business-assistant-workingtimes-plugin = { path = "D:/GIT/BenjaminKobjolke/business-assistant-workingtimes-plugin", editable = true }
business-assistant-tts-plugin = { path = "D:/GIT/BenjaminKobjolke/business-assistant-tts-plugin", editable = true }

[project.scripts]
business-assistant = "business_assistant.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tools"]
